# NoDelete

./: CMakeLists.txt  README.md  WindowsManagement.cpp  WindowsManagement.h  config.ini  mainwindow.cpp  release.bat
src/headers/: WindowsManagement.h  mainwindow.h  util.h
src/sources/: WindowsManagement.cpp  main.cpp  mainwindow.cpp  util.cpp
src/ui/: app_icon.rc  mainwindow.ui  res.qrc
